pgcenter (devel) unstable; urgency=low

  * rewrite Makefile, add workaround for wrong path from OpenSUSE
    ncurses-config.
  * define DUPLEX_UNKNOWN explicitly.

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sat, 19 Dec 2015 22:45:29 +0500

pgcenter (0.2.0) unstable; urgency=low

  * change default long query age to 00:00:00.5
  * fix segfault when adding new connection cancelled.
  * clean out code after iostat/nicstat stuff.
  * add nicstat subscreen.
  * divide init_stats() into init_stats() and init_iostats(), add free_iostats().
  * add iostat subscreen prototype.
  * expand log_opened into subscreen entity, which allows add new subscreens
    with new functions (iostat, nicstat, etc).
  * add pg_stat_statements temp.
  * use 100ms for escdelay.
  * config edit buttons replaced with menu.
  * change key mappings (rare actions moved from letters).
  * fix hardirq/softirq/steal wrong placement.
  * change read/write .pgcenterrc funcs.
  * add calls column into pg_stat_statements timing screen.
  * add pg_stat_statements io screen (9.1 and never).
  * set work_mem to 32MB (reduce disk spill in pg_stat_statements).
  * fix wrong array sort for pg_stat_statements.
  * pg_stat_activity.query formatting.
  * fix crash on sticking keys.
  * fix crash on switching from erroneous screen.
  * fix log viewing/config editing when connected through unix socket.
  * implement pg_stat_statements.queryid for non-9.4 pg.
  * fix broken pg_stat_statements before 9.4.

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sat, 19 Dec 2015 13:54:12 +0500

pgcenter (0.1.3) unstable; urgency=low

  * fix pg_stat_statements general for 9.1.
  * pg_stat_statements timing improvements.
  * truncate conninfo string if it too long.
  * add swap,dirty,writeback stats.
  * connection info moved from left to right side.
  * add memory stat.
  * reset stats counters when close screen.
  * remove unnecessary WHERE from qstats query.
  * fix segfault on screen switching when screen not exists.